--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -13,7 +13,7 @@
 <div class="panel-body">
 <div class="btn-toolbar" role="toolbar" aria-label="Buttons">
     <div class="btn-group" role="group" aria-label="Download">
-        <a class="btn btn-primary btn-large" href="{% url 'problem_set_attempt' problem_set.pk %}" role="button">
+        <a class="btn btn-primary btn-large" href="{% url 'problem_set_attempts' problem_set.pk %}" role="button">
             Prenesi vse datoteke z nalogami
         </a>
     </div>
