--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -31,8 +31,8 @@
         </div>
         {% endif %}
 
-<div class="form-group"><label class="sr-only" for="id_username">Uporabniško ime</label><input class="form-control" id="id_username" maxlength="254" name="username" placeholder="NovakJ14" required="required" title="" type="text" value="nt" autocomplete="off"></div>
-<div class="form-group"><label class="sr-only" for="id_password">Gelso</label><input class="form-control" id="id_password" maxlength="254" name="password" placeholder="Triglav.1" required="required" title="" type="password" value="nt" autocomplete="off"></div>
+<div class="form-group"><label class="sr-only" for="id_username">Uporabniško ime</label><input class="form-control" id="id_username" maxlength="254" name="username" placeholder="NovakJ14" required="required" title="" type="text" autocomplete="off"></div>
+<div class="form-group"><label class="sr-only" for="id_password">Gelso</label><input class="form-control" id="id_password" maxlength="254" name="password" placeholder="Triglav.1" required="required" title="" type="password" autocomplete="off"></div>
 
     	{% buttons %}
 	        <button type="submit" class="btn btn-default">
