--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load staticfiles %}
-
 {% block title %}Tomo – {{ course.title }}{% endblock %}
 
 {% block navigation-left %} 
