--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-default">
       		<div class="container-fluid">
         		<div class="navbar-header">
-          			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-5">
+          			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             			<span class="sr-only">Toggle navigation</span>
             			<span class="icon-bar"></span>
             			<span class="icon-bar"></span>
@@ -30,8 +30,7 @@
           			</button>
           			 <a class="navbar-brand" href="/uvp/">Tomo</a>
         		</div>
-
-        		<div class="collapse navbar-collapse" id="navbar">
+        		<div class="collapse navbar-collapse" id="myNavbar">
         			<ul class="nav navbar-nav navbar-left">
 	        			{% block navigation-left %} 
     	    		 	{% endblock %} 
