--- a/web/templates/homepage.html
+++ b/web/templates/homepage.html
@@ -11,7 +11,7 @@
         </div>
     
         <ul class="list-group">
-          {% for problem_set in course.recent_problem_sets %}
+          {% for problem_set in course.annotated_problem_sets %}
           <li class="list-group-item"><a href="{% url 'problem_set_detail' problem_set.pk %}"><h5>{{ problem_set.title }}</h5></a></li>
           {% endfor %}
           <li class="list-group-item"><a href="{% url 'course_detail' course.pk %}"><h5>Vsi sklopi</h5></a></li>
