--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -27,18 +27,7 @@
         </div>
         <ul class="list-group">
           {% for problem_set in course.annotated_problem_sets %}
-          <li class="list-group-item">
- 		  <div class="media">
-			<div class="media-left media-middle">
-			  <div style='width: 80px; height: 60px; line-height: 60px; font-size: 20px;'>
-			  	<p class="text-center percentage">{{ problem_set.percentage }}%</p>
-			  </div>
-			</div>
-			<div class="media-body media-middle">
-			  <h4 class="media-heading"><a href="{% url 'problem_set_detail' problem_set.pk %}">{{ problem_set.title }}</a></h4>
-			</div>
-		  </div>          
-          </li>
+          {% include 'courses/_problem_set.html' %}
           {% endfor %}
         </ul>
     </div>
