--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -2,7 +2,9 @@
 <div class="media">
   <div class="media-left">
     <div style='width: 80px; height: 60px; line-height: 60px; font-size: 20px;'>
-      <p class="text-center percentage">{{ problem_set.percentage }}<small>%</small></p>
+      {% with percentage=problem_set.percentage %}
+      <p class="text-center percentage text-{% if percentage < 50 %}danger{% elif percentage < 90 %}warning{% else %}success{% endif %}">{{ percentage }}<small>%</small></p>
+      {% endwith %}
     </div>
   </div>
   <div class="media-body media-middle">
