--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -19,11 +19,18 @@
     <div class="container">
   
     {% block navigation %}
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
       		<div class="container-fluid">
         		<div class="navbar-header">
+        			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            			<span class="sr-only">Toggle navigation</span>
+            			<span class="icon-bar"></span>
+            			<span class="icon-bar"></span>
+            			<span class="icon-bar"></span>
+          			</button>
           			 <a class="navbar-brand" href="/uvp/">Tomo</a>
         		</div>
+        		<div class="collapse navbar-collapse" id="myNavbar">
         			<ul class="nav navbar-nav navbar-left">
 	        			{% block navigation-left %} 
     	    		 	{% endblock %} 
@@ -37,7 +44,8 @@
         						{{ user.get_full_name }} {% trans "(logout)" %}
         					</a>
      	     			</li>
-        			</ul>        		
+        			</ul>
+       			</div>        		
       		</div>
     	</nav>
     {% endblock %}
