--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -74,5 +74,17 @@
       });
     </script>
     {% block extra_js %}{% endblock %}
+    <footer>
+	    <div class="container">
+		  <div class="row">
+		    <div class="col-md-6">
+		    	<img src="http://tyrion.fmf.uni-lj.si/ess.png" alt="Evropski sklad za regionalni razvoj" width="500" height="139">
+		    </div>
+		    <div class="col-md-6">
+		    	<img src="http://tyrion.fmf.uni-lj.si/mizs.png" alt="Ministrstvo za izobraževanje, znanost in šport" 
+		    	     style="padding-top: 10px" width="400" height="65">
+		    </div>
+		  </div>
+    </footer>
   </body>
 </html>
