Add UL logo and disclaimer

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -76,15 +76,22 @@
     {% block extra_js %}{% endblock %}
     <footer>
 	    <div class="container">
-		  <div class="row">
-		    <div class="col-md-6">
-		    	<img src="http://tyrion.fmf.uni-lj.si/ess.png" alt="Evropski sklad za regionalni razvoj" width="500" height="139">
-		    </div>
-		    <div class="col-md-6">
-		    	<img src="http://tyrion.fmf.uni-lj.si/mizs.png" alt="Ministrstvo za izobraževanje, znanost in šport" 
-		    	     style="padding-top: 10px" width="400" height="65">
-		    </div>
-		  </div>
+        <div class="row">
+          <div class="col-md-4">
+            <img src="http://tyrion.fmf.uni-lj.si/ul.png" class="center-block" alt="Univerza v Ljubljani" style="max-width: 100%; max-height: 6em">
+          </div>
+          <div class="col-md-4">
+            <img src="http://tyrion.fmf.uni-lj.si/ess.png" class="center-block" alt="Evropski sklad za regionalni razvoj" style="max-width: 100%; max-height: 6em">
+          </div>
+          <div class="col-md-4">
+            <img src="http://tyrion.fmf.uni-lj.si/mizs.png" class="center-block" alt="Ministrstvo za izobraževanje, znanost in šport" 
+                 style="max-width: 100%; max-height: 6em">
+          </div>
+        </div>
+        <p>
+          Operacijo delno financira Evropska unija iz Evropskega sklada za regionalni razvoj ter Ministrstvo za izobraževanje, znanost in šport. Operacija se izvaja v okviru Operativnega programa krepitve regionalnih razvojnih potencialov v obdobju 2007&mdash;2013, razvojne prioritete: gospodarska razvojna infrastruktura; prednostne usmeritve: informacijska družba.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
