--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -10,13 +10,29 @@
         {% endwith %}
       </div>
     </div>
- 	<div class="media-body media-middle">		
-	  <h4 class="media-heading">
-	    <a href="{% url 'problem_set_detail' problem_set.pk %}">{{ problem_set.title }}</a>
-	  </h4>
-	  <a href="{% url 'problem_set_toggle_visible' problem_set.pk %}" class="status" rel="tooltip" title="Sklop je {% if problem_set.visible %}viden{% else %}skrit{% endif %}">
-	    <span class="glyphicon glyphicon-eye-{% if problem_set.visible %}open{% else %}close{% endif %}" aria-hidden="true"></span>
-	  </a>
+ 	<div class="media-body media-middle">	
+ 		<div class="row">
+		  <div class="col-md-6">
+		  	<h4 class="media-heading">
+			    <a href="{% url 'problem_set_detail' problem_set.pk %}">{{ problem_set.title }}</a>
+		    </h4>
+		  </div>
+		  <div class="col-md-6">
+		  	 <span class="pull-right">
+		  	 <div class="btn-group" role="group" aria-label="Move">
+                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk 1 %}" role="button" aria-label="Move Up">
+                    <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                </a>
+                <a class="btn btn-default" href="{% url 'problem_set_move' problem_set.pk -1 %}" role="button" aria-label="Move Down">
+                    <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                </a>
+             </div>
+			 <a href="{% url 'problem_set_toggle_visible' problem_set.pk %}" class="status" rel="tooltip" title="Sklop je {% if problem_set.visible %}viden{% else %}skrit{% endif %}">
+			   <span style="align-content:flex-end" class="glyphicon glyphicon-eye-{% if problem_set.visible %}open{% else %}close{% endif %}" aria-hidden="true"></span>
+			 </a>
+			 </span>
+		  </div>
+		</div>		  
 	</div>
   </div>          
 </li>
